# ==============================================================================
# C++ Tools
#
# CLI utilities built from C++ source. Tools are organized by domain and output
# to bin/tools/.
# ==============================================================================

include(apex/All)

# ------------------------------------------------------------------------------
# Registry Tools
# ------------------------------------------------------------------------------

add_subdirectory(registry)

# ------------------------------------------------------------------------------
# Aggregate Target
# ------------------------------------------------------------------------------

apex_finalize_cpp_tools()
