[project]
name = "apex-py-tools"
version = "0.0.1"
description = "CLI tools for Apex CSF C++ project"
authors = [
    {name = "Kevin Alexander Gomez"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.2.4,<3.0.0",
    "matplotlib>=3.10.9,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "scipy>=1.11.0,<2.0.0",
    "tomli>=2.4.1,<3.0.0",
    "tomlkit>=0.15.0,<0.16.0",
    "toml>=0.10.2,<0.11.0",
]

[project.scripts]
# Operations tools
ops-deck = "apex_tools.ops.deck_gen:main"
zenith-target = "apex_tools.ops.target_gen:main"
# Monte Carlo tools
mc-plot = "apex_tools.mc.mc_plot:main"
# Benchmarking tools have moved to Vernier:
#   https://github.com/apexedgesystems/vernier

[dependency-groups]
dev = [
    # Build backend, locked so wheel builds resolve from the offline wheelhouse
    # (build-system requires are not part of the dependency lock otherwise).
    "hatchling>=1.27.0,<2.0.0",
    "pytest>=9.1.1,<10.0.0",
    "pre-commit>=4.6.0,<5.0.0",
    "black>=26.5.1,<27.0.0",
    "flake8>=7.1.2,<8.0.0",
    "mypy>=2.2.0,<3.0.0",
    "isort>=8.0.1,<9.0.0",
    "flake8-bugbear>=25.11.29,<26.0.0",
    "flake8-comprehensions>=3.16.0,<4.0.0",
    "flake8-docstrings>=1.7.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_tools"]

# Note: black, isort, and flake8 configs are managed by root .pre-commit-config.yaml
# and .flake8 - no local overrides needed here.
