[package]
name = "apex-rust-tools"
version = "0.1.0"
edition = "2021"
description = "CLI tools for Apex CSF C++ project"
authors = ["Kevin Alexander Gomez"]
license = "MIT"
resolver = "2"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sysinfo = "0.33.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
toml = "0.8"                       # for config files
toml_edit = "0.22"                 # for emit.rs (TOML templates)
clap = { version = "4.5", features = ["derive"] }  # CLI parsing
nix = { version = "0.29", default-features = false, features = ["term", "fs", "poll", "time"] }
once_cell = "1.19.0"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"                        # CSV parsing with serde support

# Conditionally compile when the "cuda" feature is enabled
cuda-sys = { version = "0.2", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[features]
default = []
cuda = ["dep:cuda-sys"]

[profile.dev]
debug = true
overflow-checks = true
opt-level = 0

[profile.release]
debug = false
overflow-checks = true
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[lib]
name = "apex_rust_tools"
path = "src/lib.rs"

[[bin]]
name = "serial_dev_checker"
path = "src/bin/serial_dev_checker.rs"

[[bin]]
name = "serial_dev_tester"
path = "src/bin/serial_dev_tester.rs"

[[bin]]
name = "tprm_template"
path = "src/bin/tprm_template.rs"

[[bin]]
name = "upx_tool"
path = "src/bin/upx_tool.rs"

[[bin]]
name = "cfg2bin"
path = "src/bin/cfg2bin.rs"

[[bin]]
name = "tprm_pack"
path = "src/bin/tprm_pack.rs"

[[bin]]
name = "rdat_tool"
path = "src/bin/rdat_tool.rs"

[[bin]]
name = "sdat_tool"
path = "src/bin/sdat_tool.rs"

[[bin]]
name = "apex_data_gen"
path = "src/bin/apex_data_gen.rs"

[package.metadata.docs.rs]
features = ["cuda"]
no-default-features = true
