# ==============================================================================
# Domain: sim/environment
# ==============================================================================
# External fields and forces acting on vehicle from surrounding environment.
# ==============================================================================

add_subdirectory(gravity)
add_subdirectory(terrain)

# --- PORT: Uncomment as domains are ported ---
# add_subdirectory(magnetic)
# add_subdirectory(atmosphere)
# add_subdirectory(solar)
